--- a/webroot/index.html
+++ b/webroot/index.html
@@ -39,7 +39,7 @@
 				Manage makes it simple for software teams
 				to plan day-to-day tasks while keeping the larger team goals in view.
 			</p>
-			<button> Get Started </button>
+			<button class= "manage__bring__button"> Get Started </button>
 		</section>
 	</header>
 	<main>
