Fixed the different part with mobile and without fonts

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -43,8 +43,8 @@
 		</section>
 	</header>
 	<main>
-		<section>
-			<article>
+		<section class="manage__different">
+			<article class="manage__different__head">
 				<h2>
 					What’s different about Manage?
 				</h2>
@@ -55,15 +55,15 @@
 				</p>
 			</article>
 
-			<article>
-				<nav>
-					<ul>
-						<li>
-							<div>
-								<button>
+			<article class="manage__differents">
+				<nav class="manage__differents__navigation">
+					<ul class="manage__differents__navigation--lists" >
+						<li class="manage__differents__navigation--list">
+							<div class="manage__differents__smcontainer">
+								<button class="button__number">
 									01
 								</button>
-								<h3>
+								<h3 class="manage__differents__title">
 									Track company-wide progress
 								</h3>
 							</div>
@@ -74,13 +74,14 @@
 								sight of the bigger picture again
 							</p>
 						</li>
-						<li>
+						<li class="manage__differents__navigation--list">
 
-							<div>
-								<button>
+							<div class="manage__differents__smcontainer">
+								<button class="button__number">
 									02
 								</button>
-								<h3>
+								<h3 class="manage__differents__title">
+									
 									Advanced built-in reports
 								</h3>
 							</div>
@@ -92,12 +93,12 @@
 							</p>
 
 						</li>
-						<li>
-							<div>
-								<button>
+						<li class="manage__differents__navigation--list">
+							<div class="manage__differents__smcontainer">
+								<button class="button__number">
 									03
 								</button>
-								<h3>
+								<h3 class="manage__differents__title">
 									Everything you need in one place
 								</h3>
 							</div>
