--- a/webroot/index.html
+++ b/webroot/index.html
@@ -39,7 +39,7 @@
 				Manage makes it simple for software teams
 				to plan day-to-day tasks while keeping the larger team goals in view.
 			</p>
-			<button class= "manage__bring__button"> Get Started </button>
+			<button class="manage__bring__button"> Get Started </button>
 		</section>
 	</header>
 	<main>
@@ -57,7 +57,7 @@
 
 			<article class="manage__differents">
 				<nav class="manage__differents__navigation">
-					<ul class="manage__differents__navigation--lists" >
+					<ul class="manage__differents__navigation--lists">
 						<li class="manage__differents__navigation--list">
 							<div class="manage__differents__smcontainer">
 								<button class="button__number">
@@ -81,7 +81,7 @@
 									02
 								</button>
 								<h3 class="manage__differents__title">
-									
+
 									Advanced built-in reports
 								</h3>
 							</div>
@@ -112,46 +112,55 @@
 				</nav>
 			</article>
 		</section>
-		<section>
-			<h2>What they’ve said</h2>
-			<article>
-				<div>
-					<img src="./images/avatar-anisha.png" alt="anisha">
-					<h4> Anisha Li </h4>
-					<p>
-						“Manage has supercharged our team’s workflow. The ability to
-						maintain visibility on larger milestones at all times keeps everyone
-						motivated.
-					</p>
+		<section class="manage__what" >
+			<h2 class="manage__what__bigtitle">What they’ve said</h2>
+			<article class="manage__what__container">
+				<div class="manage__what__subcontainer">
+					<img class="manage__what__image" src="./images/avatar-anisha.png" alt="anisha">
+					<div class="manage__what__smcontainer">
+						<h4 class="manage__what__title"> Anisha Li </h4>
+						<p class="manage__what__paragraph">
+							“Manage has supercharged our team’s workflow. The ability to
+							maintain visibility on larger milestones at all times keeps everyone
+							motivated.
+						</p>
+					</div>
 				</div>
-				<div>
-					<img src="./images/avatar-ali.png" alt="ali">
-					<h4> Ali Bravo </h4>
-					<p>
-						“We have been able to cancel so many other
-						subscriptions since using Manage. There is no more cross-channel confusion
-						and everyone is much more focused.”
-					</p>
+				<div class="manage__what__subcontainer">
+					<img  class="manage__what__image"  src="./images/avatar-ali.png" alt="ali">
+					<div  class="manage__what__smcontainer">
+						<h4 class="manage__what__title"> Ali Bravo </h4>
+						<p>
+							“We have been able to cancel so many other
+							subscriptions since using Manage. There is no more cross-channel confusion
+							and everyone is much more focused.”
+						</p>
+					</div>
 				</div>
-				<div>
-					<img src="./images/avatar-richard.png" alt="richard">
-					<h4>Richard Watts</h4>
-					<p>
-						“Manage allows us to
-						provide structure and process. It keeps us organized and focused. I can’t
-						stop recommending them to everyone I talk to!”
-					</p>
+				<div class="manage__what__subcontainer">
+					<img  class="manage__what__image"  src="./images/avatar-richard.png" alt="richard">
+					<div  class="manage__what__smcontainer">
+						<h4 class="manage__what__title">Richard Watts</h4>
+						<p>
+							“Manage allows us to
+							provide structure and process. It keeps us organized and focused. I can’t
+							stop recommending them to everyone I talk to!”
+						</p>
+					</div>
 				</div>
-				<div>
-					<img src="./images/avatar-shanai.png" alt="shanai">
-					<h4>
-						Shanai Gough
-					</h4>
-					<p>
-						“Their software
-						allows us to track, manage and collaborate on our projects from anywhere. It
-						keeps the whole team in-sync without being intrusive.
-					</p>
+				<div class="manage__what__subcontainer">
+
+					<img  class="manage__what__image"  src="./images/avatar-shanai.png" alt="shanai">
+					<div  class="manage__what__smcontainer">
+						<h4 class="manage__what__title">
+							Shanai Gough
+						</h4>
+						<p>
+							“Their software
+							allows us to track, manage and collaborate on our projects from anywhere. It
+							keeps the whole team in-sync without being intrusive.
+						</p>
+					</div>
 				</div>
 			</article>
 			<button>Get Started</button>
@@ -190,7 +199,7 @@
 						<li><a href="">Twitter</a></li>
 						<li><a href="">Pinterest</a></li>
 						<li><a href="">Instagram</a></li>
-						
+
 					</ul>
 				</nav>
 			</div>
