--- a/webroot/index.html
+++ b/webroot/index.html
@@ -112,7 +112,7 @@
 				</nav>
 			</article>
 		</section>
-		<section class="manage__what" >
+		<section class="manage__what">
 			<h2 class="manage__what__bigtitle">What they’ve said</h2>
 			<article class="manage__what__container">
 				<div class="manage__what__subcontainer">
@@ -127,8 +127,8 @@
 					</div>
 				</div>
 				<div class="manage__what__subcontainer">
-					<img  class="manage__what__image"  src="./images/avatar-ali.png" alt="ali">
-					<div  class="manage__what__smcontainer">
+					<img class="manage__what__image" src="./images/avatar-ali.png" alt="ali">
+					<div class="manage__what__smcontainer">
 						<h4 class="manage__what__title"> Ali Bravo </h4>
 						<p>
 							“We have been able to cancel so many other
@@ -138,8 +138,8 @@
 					</div>
 				</div>
 				<div class="manage__what__subcontainer">
-					<img  class="manage__what__image"  src="./images/avatar-richard.png" alt="richard">
-					<div  class="manage__what__smcontainer">
+					<img class="manage__what__image" src="./images/avatar-richard.png" alt="richard">
+					<div class="manage__what__smcontainer">
 						<h4 class="manage__what__title">Richard Watts</h4>
 						<p>
 							“Manage allows us to
@@ -150,8 +150,8 @@
 				</div>
 				<div class="manage__what__subcontainer">
 
-					<img  class="manage__what__image"  src="./images/avatar-shanai.png" alt="shanai">
-					<div  class="manage__what__smcontainer">
+					<img class="manage__what__image" src="./images/avatar-shanai.png" alt="shanai">
+					<div class="manage__what__smcontainer">
 						<h4 class="manage__what__title">
 							Shanai Gough
 						</h4>
@@ -163,7 +163,9 @@
 					</div>
 				</div>
 			</article>
-			<button>Get Started</button>
+			<div class="manage__what__containerbutton">
+				<button class="manage__what__button">Get Started</button>
+			</div>
 		</section>
 	</main>
 	<footer>
