--- a/webroot/index.html
+++ b/webroot/index.html
@@ -168,43 +168,47 @@
 			</div>
 		</section>
 	</main>
-	<footer>
-		<section>
-			<h3>
+	<footer class="footer">
+		<section class="footer__simplify">
+			<h3 class="footer__title">
 				Simplify
 				how your team works today
 			</h3>
-			<button> Get started </button>
+			<button class="footer__simplify__button"> Get started </button>
 		</section>
-		<section>
-			<button>Updates in your inbox…</button>
-			<button>Go</button>
-			<div>
-				<nav>
-					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">Pricing</a></li>
-						<li><a href="">Product</a></li>
-						<li><a href="">About Us</a></li>
-						<li><a href="">Carrer</a></li>
-						<li><a href="">Community</a></li>
-						<li><a href="">Privacy Policy</a></li>
+		<section class="footer__updates">
+			<button class="footer__updates__inbox"> Updates in your inbox… </button>
+			<button class="footer__updates__go">Go</button>
+			<div class="footer__updates__container">
+				<nav class="footer__updates__navigation">
+					<ul class="footer__updates__navigation--list">
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/home">Home</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/princing">Pricing</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/product">Product</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/about">About Us</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="carrer">Carrer</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="community">Community</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="privicy">Privacy Policy</a></li>
 					</ul>
 				</nav>
 			</div>
 
-			<div>
-				<nav>
-					<ul>
-						<li><a href="">Facebook</a></li>
-						<li><a href="">Youtube</a></li>
-						<li><a href="">Twitter</a></li>
-						<li><a href="">Pinterest</a></li>
-						<li><a href="">Instagram</a></li>
+			<div class="footer__updates__container2">
+				<nav class="footer__updates__navigation2">
+					<ul class="footer__updates__navigation2--list">
+						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore facebook" href="facebook">Facebook</a></li>
+						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore youtube" href="youtube">Youtube</a></li>
+						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore twitter" href="twitter">Twitter</a></li>
+						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore pinterest" href="pinterrest">Pinterest</a></li>
+						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore instagram" href="instagram">Instagram</a></li>
 
 					</ul>
 				</nav>
 			</div>
+			<p class="footer__updates__indice">
+				Go Copyright 2020.
+			All Rights Reserved
+		</p>
 		</section>
 	</footer>
 </body>
