Fixed the masthead and adding default value of the page

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -21,14 +21,14 @@
 			<label for="check">
 				<img class="bar" src="./images/icon-hamburger.svg" alt="">
 			</label>
-			<input type="checkbox" id="check" class="">
-			<nav>
-				<ul>
-					<li><a href="">Pricing</a></li>
-					<li><a href="">Product</a></li>
-					<li><a href="">About Us</a></li>
-					<li><a href="">Carrer</a></li>
-					<li><a href="">Community</a></li>
+			<input type="checkbox" id="check" class="check">
+			<nav class="masthead__navigation">
+				<ul class="masthead__navigation__list">
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore princing" href="">Pricing</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore product" href="">Product</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore about" href="">About Us</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore carrer" href="">Carrer</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore community" href="">Community</a></li>
 				</ul>
 			</nav>
 		</section>
