--- a/webroot/index.html
+++ b/webroot/index.html
@@ -31,6 +31,7 @@
 					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore community" href="">Community</a></li>
 				</ul>
 			</nav>
+			<button class="masthead__button"> Get Started </button>
 		</section>
 		<section class="manage__bring">
 			<img class="manage__bring__image" src="./images//illustration-intro.svg" alt="">
