Fixed the header

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -15,8 +15,8 @@
 <body>
 	<header class="manage-header">
 		<section class="masthead">
-			<h1>
-				<a href="/#"><img src="../images/logo.svg" alt=""></a>
+			<h1 class="masthead__title">
+				<a  href="/#"><img class="masthead__logo" src="../images/logo.svg" alt=""></a>
 			</h1>
 			<label for="check">
 				<img class="bar" src="./images/icon-hamburger.svg" alt="">
