Fixed the header

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -16,7 +16,7 @@
 	<header class="manage-header">
 		<section class="masthead">
 			<h1 class="masthead__title">
-				<a  href="/#"><img class="masthead__logo" src="../images/logo.svg" alt=""></a>
+				<a href="/#"><img class="masthead__logo" src="../images/logo.svg" alt=""></a>
 			</h1>
 			<label for="check">
 				<img class="bar" src="./images/icon-hamburger.svg" alt="">
@@ -24,23 +24,32 @@
 			<input type="checkbox" id="check" class="check">
 			<nav class="masthead__navigation">
 				<ul class="masthead__navigation__list">
-					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore princing" href="">Pricing</a></li>
-					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore product" href="">Product</a></li>
-					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore about" href="">About Us</a></li>
-					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore carrer" href="">Carrer</a></li>
-					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore community" href="">Community</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore princing"
+							href="">Pricing</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore product"
+							href="">Product</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore about"
+							href="">About Us</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore carrer"
+							href="">Carrer</a></li>
+					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore community"
+							href="">Community</a></li>
 				</ul>
 			</nav>
 			<button class="masthead__button"> Get Started </button>
 		</section>
 		<section class="manage__bring">
-			<img class="manage__bring__image" src="./images//illustration-intro.svg" alt="">
-			<h2> Bring everyonetogether to build better products</h2>
-			<p>
+			<div class="manage__bring__imageconatiner">
+				<img class="manage__bring__image" src="./images//illustration-intro.svg" alt="">
+			</div>
+			<article class="manage__bring__conatiner">
+			<h2  class="manage__bring__subtitle"> Bring everyonetogether to build better products</h2>
+			<p class="manage__bring__paragraph">
 				Manage makes it simple for software teams
 				to plan day-to-day tasks while keeping the larger team goals in view.
 			</p>
 			<button class="manage__bring__button"> Get Started </button>
+			</article>
 		</section>
 	</header>
 	<main>
@@ -183,13 +192,20 @@
 			<div class="footer__updates__container">
 				<nav class="footer__updates__navigation">
 					<ul class="footer__updates__navigation--list">
-						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/home">Home</a></li>
-						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/princing">Pricing</a></li>
-						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/product">Product</a></li>
-						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="/about">About Us</a></li>
-						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="carrer">Carrer</a></li>
-						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="community">Community</a></li>
-						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore" href="privicy">Privacy Policy</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore"
+								href="/home">Home</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore"
+								href="/princing">Pricing</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore"
+								href="/product">Product</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore"
+								href="/about">About Us</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore"
+								href="carrer">Carrer</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore"
+								href="community">Community</a></li>
+						<li class="footer__updates__navigation--lists"> <a class="footer__updates__navigation--anchore"
+								href="privicy">Privacy Policy</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -197,19 +213,26 @@
 			<div class="footer__updates__container2">
 				<nav class="footer__updates__navigation2">
 					<ul class="footer__updates__navigation2--list">
-						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore facebook" href="facebook">Facebook</a></li>
-						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore youtube" href="youtube">Youtube</a></li>
-						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore twitter" href="twitter">Twitter</a></li>
-						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore pinterest" href="pinterrest">Pinterest</a></li>
-						<li class="footer__updates__navigation2--lists"><a class="footer__updates__navigation2--anchore instagram" href="instagram">Instagram</a></li>
+						<li class="footer__updates__navigation2--lists"><a
+								class="footer__updates__navigation2--anchore facebook" href="facebook">Facebook</a></li>
+						<li class="footer__updates__navigation2--lists"><a
+								class="footer__updates__navigation2--anchore youtube" href="youtube">Youtube</a></li>
+						<li class="footer__updates__navigation2--lists"><a
+								class="footer__updates__navigation2--anchore twitter" href="twitter">Twitter</a></li>
+						<li class="footer__updates__navigation2--lists"><a
+								class="footer__updates__navigation2--anchore pinterest" href="pinterrest">Pinterest</a>
+						</li>
+						<li class="footer__updates__navigation2--lists"><a
+								class="footer__updates__navigation2--anchore instagram" href="instagram">Instagram</a>
+						</li>
 
 					</ul>
 				</nav>
 			</div>
 			<p class="footer__updates__indice">
 				Go Copyright 2020.
-			All Rights Reserved
-		</p>
+				All Rights Reserved
+			</p>
 		</section>
 	</footer>
 </body>
