Trying to fixed the header

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -19,9 +19,13 @@
 				<a href="/#"><img class="masthead__logo" src="../images/logo.svg" alt=""></a>
 			</h1>
 			<label for="check">
-				<img class="bar" src="./images/icon-hamburger.svg" alt="">
+				<button class="button__open">
+					<img class="image__open" src="./images/icon-hamburger.svg" alt="">
+					<img class="image__close" src="./images/icon-close.svg" />
+				 </button>
 			</label>
 			<input type="checkbox" id="check" class="check">
+
 			<nav class="masthead__navigation">
 				<ul class="masthead__navigation__list">
 					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore princing"
@@ -43,12 +47,12 @@
 				<img class="manage__bring__image" src="./images//illustration-intro.svg" alt="">
 			</div>
 			<article class="manage__bring__conatiner">
-			<h2  class="manage__bring__subtitle"> Bring everyonetogether to build better products</h2>
-			<p class="manage__bring__paragraph">
-				Manage makes it simple for software teams
-				to plan day-to-day tasks while keeping the larger team goals in view.
-			</p>
-			<button class="manage__bring__button"> Get Started </button>
+				<h2 class="manage__bring__subtitle"> Bring everyonetogether to build better products</h2>
+				<p class="manage__bring__paragraph">
+					Manage makes it simple for software teams
+					to plan day-to-day tasks while keeping the larger team goals in view.
+				</p>
+				<button class="manage__bring__button"> Get Started </button>
 			</article>
 		</section>
 	</header>
@@ -235,6 +239,8 @@
 			</p>
 		</section>
 	</footer>
+	<div class="curtain"></div>
+	<script src="index.js"></script>
 </body>
 
 </html>
