--- a/webroot/index.html
+++ b/webroot/index.html
@@ -20,9 +20,9 @@
 			</h1>
 			<label for="check">
 				<button class="button__open">
-					<img class="image__open" src="./images/icon-hamburger.svg" alt="">
+					<img class="image__open" src="./images/icon-hamburger.svg" alt="" />
 					<img class="image__close" src="./images/icon-close.svg" />
-				 </button>
+				</button>
 			</label>
 			<input type="checkbox" id="check" class="check">
 
@@ -128,55 +128,79 @@
 		</section>
 		<section class="manage__what">
 			<h2 class="manage__what__bigtitle">What they’ve said</h2>
-			<article class="manage__what__container">
-				<div class="manage__what__subcontainer">
-					<img class="manage__what__image" src="./images/avatar-anisha.png" alt="anisha">
-					<div class="manage__what__smcontainer">
-						<h4 class="manage__what__title"> Anisha Li </h4>
-						<p class="manage__what__paragraph">
-							“Manage has supercharged our team’s workflow. The ability to
-							maintain visibility on larger milestones at all times keeps everyone
-							motivated.
-						</p>
-					</div>
-				</div>
-				<div class="manage__what__subcontainer">
-					<img class="manage__what__image" src="./images/avatar-ali.png" alt="ali">
-					<div class="manage__what__smcontainer">
-						<h4 class="manage__what__title"> Ali Bravo </h4>
-						<p>
-							“We have been able to cancel so many other
-							subscriptions since using Manage. There is no more cross-channel confusion
-							and everyone is much more focused.”
-						</p>
-					</div>
-				</div>
-				<div class="manage__what__subcontainer">
-					<img class="manage__what__image" src="./images/avatar-richard.png" alt="richard">
-					<div class="manage__what__smcontainer">
-						<h4 class="manage__what__title">Richard Watts</h4>
-						<p>
-							“Manage allows us to
-							provide structure and process. It keeps us organized and focused. I can’t
-							stop recommending them to everyone I talk to!”
-						</p>
-					</div>
-				</div>
-				<div class="manage__what__subcontainer">
 
-					<img class="manage__what__image" src="./images/avatar-shanai.png" alt="shanai">
-					<div class="manage__what__smcontainer">
-						<h4 class="manage__what__title">
-							Shanai Gough
-						</h4>
-						<p>
-							“Their software
-							allows us to track, manage and collaborate on our projects from anywhere. It
-							keeps the whole team in-sync without being intrusive.
-						</p>
+
+			<article class="manage__what__container">
+				<div class="manage__slider__container">
+					<div class="manage__menu">
+						<label for="slide-dot-1" class="slide-dot"></label>
+						<label for="slide-dot-2" class="slide-dot"></label>
+						<label for="slide-dot-3" class="slide-dot"></label>
+						<label for="slide-dot-4" class="slide-dot"></label>
 					</div>
-				</div>
+					<div class="container__slide">
+						<input id="slide-dot-1" type="radio" name="slides" checked>
+						<div class="slide slide-1">
+							<div class="manage__what__subcontainer">
+								<img class="manage__what__image" src="./images/avatar-anisha.png" alt="anisha">
+								<div class="manage__what__smcontainer">
+									<h4 class="manage__what__title"> Anisha Li </h4>
+									<p class="manage__what__paragraph">
+										“Manage has supercharged our team’s workflow. The ability to
+										maintain visibility on larger milestones at all times keeps everyone
+										motivated.
+									</p>
+								</div>
+							</div>
+						</div>
+						<input id="slide-dot-2" type="radio" name="slides">
+						<div class="slide slide-2">
+							<div class="manage__what__subcontainer">
+								<img class="manage__what__image" src="./images/avatar-ali.png" alt="ali">
+								<div class="manage__what__smcontainer">
+									<h4 class="manage__what__title"> Ali Bravo </h4>
+									<p>
+										“We have been able to cancel so many other
+										subscriptions since using Manage. There is no more cross-channel confusion
+										and everyone is much more focused.”
+									</p>
+								</div>
+							</div>
+						</div>
+						<input id="slide-dot-3" type="radio" name="slides">
+						<div class="slide slide-3">
+							<div class="manage__what__subcontainer">
+								<img class="manage__what__image" src="./images/avatar-richard.png" alt="richard">
+								<div class="manage__what__smcontainer">
+									<h4 class="manage__what__title">Richard Watts</h4>
+									<p>
+										“Manage allows us to
+										provide structure and process. It keeps us organized and focused. I can’t
+										stop recommending them to everyone I talk to!”
+									</p>
+								</div>
+							</div>
+						</div>
+						<input id="slide-dot-4" type="radio" name="slides">
+						<div class="slide slide-4">
+							<div class="manage__what__subcontainer">
+
+								<img class="manage__what__image" src="./images/avatar-shanai.png" alt="shanai">
+								<div class="manage__what__smcontainer">
+									<h4 class="manage__what__title">
+										Shanai Gough
+									</h4>
+									<p>
+										“Their software
+										allows us to track, manage and collaborate on our projects from anywhere. It
+										keeps the whole team in-sync without being intrusive.
+									</p>
+								</div>
+							</div>
+						</div>
 			</article>
+
+			</div>
 			<div class="manage__what__containerbutton">
 				<button class="manage__what__button">Get Started</button>
 			</div>
