Trying to fixed the header and take out the margin in the botoom

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -19,10 +19,11 @@
 				<a href="/#"><img class="masthead__logo" src="../images/logo.svg" alt=""></a>
 			</h1>
 			<label for="check">
-				<button class="button__open">
+				<button class="button__open" >
 					<img class="image__open" src="./images/icon-hamburger.svg" alt="" />
-					<img class="image__close" src="./images/icon-close.svg" />
+					<!-- <img class="image__close" src="./images/icon-close.svg" alt /> -->
 				</button>
+
 			</label>
 			<input type="checkbox" id="check" class="check">
 
@@ -39,7 +40,9 @@
 					<li class="masthead__navigation__lists"><a class="masthead__navigation__lists--anchore community"
 							href="">Community</a></li>
 				</ul>
+				<div class="curtain"></div>
 			</nav>
+
 			<button class="masthead__button"> Get Started </button>
 		</section>
 		<section class="manage__bring">
@@ -139,7 +142,6 @@
 						<label for="slide-dot-4" class="slide-dot"></label>
 					</div>
 					<div class="container__slide">
-
 						<div class="manage__what__subcontainer">
 							<input id="slide-dot-1" type="radio" name="slides" checked>
 							<div class="slide slide-1">
@@ -199,9 +201,9 @@
 								</div>
 							</div>
 						</div>
+					</div>
+				</div>
 			</article>
-
-			</div>
 			<div class="manage__what__containerbutton">
 				<button class="manage__what__button">Get Started</button>
 			</div>
@@ -264,7 +266,7 @@
 			</p>
 		</section>
 	</footer>
-	<div class="curtain"></div>
+
 	<script src="index.js"></script>
 </body>
 
