Change the color of title and the font in the different part

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -62,10 +62,10 @@
 	<main>
 		<section class="manage__different">
 			<article class="manage__different__head">
-				<h2>
+				<h2 class="manage__different__title">
 					What’s different about Manage?
 				</h2>
-				<p>
+				<p class="manage__different__paragraph">
 					Manage provides all the functionality
 					your team needs, without the complexity. Our software is tailor-made for
 					modern digital product teams.
